--- a/HTML/home.html
+++ b/HTML/home.html
@@ -7,10 +7,7 @@
     <title>E-commerce</title>
     <link rel="stylesheet" type="text/css" href="../CSS/home.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/slider.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" type="text/css" href="../CSS/category.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/latest.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/sales.css" />
@@ -29,9 +26,9 @@
         </div>
 
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Product</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="product.html">Product</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="#">Research</a></li>
           <li><a href="#">Blog</a></li>
           <li>
