--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -91,28 +91,31 @@
             <p>Welcome to our team page. Meet the team members who work hard to make our company successful.</p>
     <div class="team">
       <div class="member">
-        <img src="member1.jpg" alt="Member 1">
+        <img src="../IMG/Ankit.jpg" alt="Member 1">
         <h2>Ankit Kumar Bindu</h2>
         <p>Group Leader</p>
-        <a href="cv1.pdf">View CV</a>
+        <button id="cvButton" data-pdf="../cv/Ankit Kumar Bindu.pdf">View CV</button>
       </div>
       <div class="member">
         <img src="member2.jpg" alt="Member 2">
         <h2>Maulikta Pandey</h2>
         <p> Designer</p>
-        <a href="cv2.pdf">View CV</a>
+        <button id="cvButton2" data-pdf="../cv/Maulikta Pandey">View CV</button>
       </div>
       <div class="member">
         <img src="member3.jpg" alt="Member 3">
         <h2>Babina Dhungel</h2>
         <p>Designer</p>
-        <a href="cv3.pdf">View CV</a>
+        <button id="cvButton3" data-pdf="../cv/Babina Dhungel.pdf">View CV</button>
+
       </div>
       <div class="member">
         <img src="member4.jpg" alt="Member 4">
         <h2>Supreem Maharjan</h2>
         <p>Designer</p>
-        <a href="cv4.pdf">View CV</a>
+        <button id="cvButton4" data-pdf="../.pdf">View CV</button>
           </div>
+          </div>   
+          <script src="../JS/cv.js"></script>
 </body>
 </html>
