--- a/HTML/research.html
+++ b/HTML/research.html
@@ -85,19 +85,49 @@
           </li>
         </ul>
       </nav>
+      <div class="container">
       <div class="research">
-    <div class="section">
-        <h2>Section 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum est a ultrices laoreet. Donec interdum tortor et convallis tincidunt. Proin lobortis justo et efficitur fermentum.</p>
-      </div>
-      <div class="section">
-        <h2>Section 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum est a ultrices laoreet. Donec interdum tortor et convallis tincidunt. Proin lobortis justo et efficitur fermentum.</p>
-      </div>
-      <div class="section">
-        <h2>Section 3</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum est a ultrices laoreet. Donec interdum tortor et convallis tincidunt. Proin lobortis justo et efficitur fermentum.</p>
-      </div>
+        <div class="section">
+          <h2><u>W3Schools</u></h2>
+          <img src="../IMG/w3school.jpg" alt="w3school">
+          <p>
+            W3Schools is a freemium educational website for learning coding online. Initially released in 1998, 
+            it derives its name from the World Wide Web but is not affiliated with the W3 Consortium.
+             W3Schools offers courses covering all aspects of web development. 
+             W3Schools also publishes free HTML templates. It is run by Refsnes Data in Norway.
+             It has an online text editor called TryIt Editor, and readers can edit examples and run the code in a test environment.<br>
+             On the site, source code examples with explanations are shown free of charge in English, most of which can also be edited and executed interactively in a live editor. 
+             Other important code elements are hidden so that the user can focus on the code shown (developer sandbox). 
+             The tutorials are divided into individual chapters on the development languages. In addition to the basics, application-related implementation options and examples, as well as a focus on individual elements of the programming language (so-called "references") are documented. 
+             In addition, there is a YouTube channel, which takes up and explains certain topics in web development, and an Internet forum. The languages HTML, CSS, and JavaScript. 
+          </p>
+            </div>
+      <div class="section2">
+        <h2><br><u>GeeksforGeeks</u></h2>
+        <img src="../IMG/gg.png" alt="w3school">
+        <p><br><br>GeeksforGeeks (GfG) is a popular online platform that provides programming articles, tutorials, interview preparation guides, and coding practice problems. It covers a wide range of topics related to computer science and programming, including algorithms, data structures, languages (such as C++, Java, Python), web development, machine learning, and more.
+
+          GeeksforGeeks is known for its extensive collection of articles and code examples, making it a valuable resource for programmers and developers at all skill levels. It offers a platform for learning, sharing knowledge, and preparing for technical interviews.
+          
+          The website also hosts coding contests and provides a coding environment to practice solving problems from various domains. GeeksforGeeks has a large community of programmers who actively participate in discussions, ask questions, and provide solutions.
+          
+          If you are interested in exploring GeeksforGeeks, you can visit their website at geeksforgeeks.org. There, you can find a vast amount of programming resources and articles to enhance your knowledge and skills.</p></div>
+      <div class="section3">
+        <h2><u>Codepen io</u></h2>
+        <img src="../IMG/codepen-io.webp" alt="w3school">
+        <p>
+          <br><br>CodePen is an online code editor, learning environment, and community for front-end web development using HTML, CSS and JavaScript code snippets, projects, and web applications. It is a social development environment for front-end designers and developers where you can build, share, and learn JavaScript, CSS, and HTML with their online code editor. CodePen is only for frontend projects and supports HTML, CSS, and JavaScript.
+          </p>
+        </div>
+        <div class="section4">
+          <h2><u>Codepen io</u></h2>
+          <img src="../IMG/codepen-io.webp" alt="w3school">
+          <p>
+            <br><br>CodePen is an online code editor, learning environment, and community for front-end web development using HTML, CSS and JavaScript code snippets, projects, and web applications. It is a social development environment for front-end designers and developers where you can build, share, and learn JavaScript, CSS, and HTML with their online code editor. CodePen is only for frontend projects and supports HTML, CSS, and JavaScript.
+            </p>
+          </div>
+
+    </div>
     </div>
 </body>
 </html>
