--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -25,7 +25,7 @@
               <li><a href="home.html">Home</a></li>
               <li><a href="product.html">Product</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="#">Research</a></li>
+              <li><a href="research.html">Research</a></li>
               <li><a href="#">Blog</a></li>
               <li>
               <div class="dropdown" >
@@ -103,7 +103,7 @@
         <button id="cvButton2" data-pdf="../cv/Maulikta Pandey">View CV</button>
       </div>
       <div class="member">
-        <img src="member3.jpg" alt="Member 3">
+        <img src="../IMG/Babina.jpg" alt="Member 3">
         <h2>Babina Dhungel</h2>
         <p>Designer</p>
         <button id="cvButton3" data-pdf="../cv/Babina Dhungel.pdf">View CV</button>
