--- a/HTML/product.html
+++ b/HTML/product.html
@@ -24,7 +24,7 @@
           <li><a href="home.html">Home</a></li>
           <li><a href="product.html">Product</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#">Research</a></li>
+          <li><a href="research.html">Research</a></li>
           <li><a href="#">Blog</a></li>
           <li>
           <div class="dropdown" >
