--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -97,22 +97,22 @@
         <button id="cvButton" data-pdf="../cv/Ankit Kumar Bindu.pdf">View CV</button>
       </div>
       <div class="member">
-        <img src="member2.jpg" alt="Member 2">
+        <img src="../IMG/Maulikta.jpg" alt="Member 2">
         <h2>Maulikta Pandey</h2>
-        <p> Designer</p>
-        <button id="cvButton2" data-pdf="../cv/Maulikta Pandey">View CV</button>
+        <p>Team Member</p>
+        <button id="cvButton2" data-pdf="../cv/Maulikta Pandey.pdf">View CV</button>
       </div>
       <div class="member">
         <img src="../IMG/Babina.jpg" alt="Member 3">
         <h2>Babina Dhungel</h2>
-        <p>Designer</p>
+        <p>Team Member</p>
         <button id="cvButton3" data-pdf="../cv/Babina Dhungel.pdf">View CV</button>
 
       </div>
       <div class="member">
         <img src="member4.jpg" alt="Member 4">
         <h2>Supreem Maharjan</h2>
-        <p>Designer</p>
+        <p>Team Member</p>
         <button id="cvButton4" data-pdf="../.pdf">View CV</button>
           </div>
           </div>   
