--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -75,7 +75,7 @@
             </ul>
             <ul class="icons">
               <li><a href="#"><i class="fas fa-search"></i></a></li>
-              <li><a href="#"><i class="fas fa-user"></i></a></li>
+              <li><a href="../HTML/loginform.html"><i class="fas fa-user"></i></a></li>
               <li><a href="#"><i class="fas fa-heart"></i></a></li>
               <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
               <li>
@@ -93,7 +93,7 @@
       <div class="member">
         <img src="../IMG/Ankit.jpg" alt="Member 1">
         <h2>Ankit Kumar Bindu</h2>
-        <p>Group Leader</p>
+        <p>Team Leader</p>
         <button id="cvButton" data-pdf="../cv/Ankit Kumar Bindu.pdf">View CV</button>
       </div>
       <div class="member">
@@ -110,10 +110,10 @@
 
       </div>
       <div class="member">
-        <img src="member4.jpg" alt="Member 4">
+        <img src="../IMG/Suprem.jpg" alt="Member 4">
         <h2>Supreem Maharjan</h2>
         <p>Team Member</p>
-        <button id="cvButton4" data-pdf="../.pdf">View CV</button>
+        <button id="cvButton4" data-pdf="../cv/Suprem Maharjan.pdf">View CV</button>
           </div>
           </div>   
           <script src="../JS/cv.js"></script>
