--- a/HTML/home.html
+++ b/HTML/home.html
@@ -79,7 +79,7 @@
         </ul>
         <ul class="icons">
           <li><a href="#"><i class="fas fa-search"></i></a></li>
-          <li><a href="#"><i class="fas fa-user"></i></a></li>
+          <li><a href="../HTML/loginform.html"><i class="fas fa-user"></i></a></li>
           <li><a href="#"><i class="fas fa-heart"></i></a></li>
           <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
           <li>
